--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </div>
 </body>
 
-<script src="script.js"></script>
+<script src="./script.js"></script>
+<script src="./test.js"></script>
 
 </html>
