ref: code refactor
desc: class names

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="col-2">
             <div class="game-score">
-                <p id="scoreBox">score : 0</p>
+                <p id="scoreBox">Score : 0</p>
                 <p id="hiscoreBox">Hi score : 0</p>
             </div>
 
