feature: meta tag added for search engine visibility

--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake game</title>
+    <meta name="description"
+    content="Hello Everyone,This is Snake-Game with Javascript">
+    <meta name="author" content="Manisha Batesar">
+
+ 
+   <!-- HTML Meta Tags -->
+<title>Snake Game - A Javascript Game built with HTML5, CSS3</title>
+<meta name="description" content="Classic snake game built with HTML5, CSS3, and JavaScript using requestAnimationFrame and event-driven programming.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://manisha-batesar.github.io/Snake-Game-JavaScript/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Snake Game - A Javascript Game built with HTML5, CSS3">
+<meta property="og:description" content="Classic snake game built with HTML5, CSS3, and JavaScript using requestAnimationFrame and event-driven programming.">
+<meta property="og:image" content="https://github.com/Manisha-batesar/Snake-Game-JavaScript/blob/main/assets/snake-wallpaper.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="manisha-batesar.github.io">
+<meta property="twitter:url" content="https://manisha-batesar.github.io/Snake-Game-JavaScript/">
+<meta name="twitter:title" content="Snake Game - A Javascript Game built with HTML5, CSS3">
+<meta name="twitter:description" content="Classic snake game built with HTML5, CSS3, and JavaScript using requestAnimationFrame and event-driven programming.">
+<meta name="twitter:image" content="https://github.com/Manisha-batesar/Snake-Game-JavaScript/blob/main/assets/snake-wallpaper.png">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+    
+
+
     <link rel="stylesheet" href="style.css">
 </head>
 
