update: opengraph preview image updated and compressed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Snake Game - A Javascript Game built with HTML5, CSS3">
 <meta property="og:description" content="Classic snake game built with HTML5, CSS3, and JavaScript using requestAnimationFrame and event-driven programming.">
-<meta property="og:image" content="https://raw.githubusercontent.com/Manisha-batesar/Snake-Game-JavaScript/main/assets/snake-wallpaper.png">
+<meta property="og:image" content="https://raw.githubusercontent.com/Manisha-batesar/Snake-Game-JavaScript/main/assets/snake-game-preview.jpg">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -26,7 +26,7 @@
 <meta property="twitter:url" content="https://manisha-batesar.github.io/Snake-Game-JavaScript/">
 <meta name="twitter:title" content="Snake Game - A Javascript Game built with HTML5, CSS3">
 <meta name="twitter:description" content="Classic snake game built with HTML5, CSS3, and JavaScript using requestAnimationFrame and event-driven programming.">
-<meta name="twitter:image" content="https://raw.githubusercontent.com/Manisha-batesar/Snake-Game-JavaScript/main/assets/snake-wallpaper.png">
+<meta name="twitter:image" content="https://raw.githubusercontent.com/Manisha-batesar/Snake-Game-JavaScript/main/assets/snake-game-preview.jpg">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     
