snake game sound mobile bug fixed and enter game button added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="row d-none" id="game-container">
         <div id="container" class="col-10"></div>
 
         <div class="col-2">
@@ -61,6 +61,9 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div id="game-enter-container">
+        <button id="game-enter-button">Enter The Game</button>
     </div>
 </body>
 
